my changes. pls merge

--- a/report/introduction/introduction.tex
+++ b/report/introduction/introduction.tex
@@ -1,12 +1,12 @@
 \chapter{Introduction}
 \pagenumbering{arabic} \setcounter{page}{1}
 
-A short paragraph introducing the topic the chapter examines.
+The goal of this paper was to determine what makes a good comment on the social media platform known as Reddit. This research was done to not only help people realise how to form an adequate post that can prove to be popular but also help train chatbots to make them seem more lifelike and to give the illusion of human speech. The data was parsed using a parser to filter down the comments of each subreddit. This made it easier to define a context for analysis. This research can prove to be useful for a number of reasons such as the previously mentioned training of AI. It could also be useful for the likes of marketing companies who need to know how to best target their online content to a wider audience. It may also be of great interest to the likes of politicians to see which side the general public stand on political events. The hypothesis of this paper would be that comments don’t stick to a predetermined formula. Their success is instead determined by varying factors such as time of post, captivating or “clickbait” titles and how relevant it is with today's current events.
 
 
 \section{Background}
 
-A number of pages about the background of the project.
+Reddit is an online Score aggregator Website. It is used for a wide variety of discussions and by all kinds of communities.
 
 \section{About this Thesis}
 This is the thesis of \emph{Insert Full Name Here}, submitted as part of the requirements for the degree of MSc Computing: Software Technology at the School of Computing, Robert Gordon University, Scotland.
