--- a/report/thesis.bib
+++ b/report/thesis.bib
@@ -10,3 +10,48 @@
 
 
 % BibTeX Entries
+@article{1,
+  author    = {Iulian Vlad Serban and
+               Chinnadhurai Sankar and
+               Mathieu Germain and
+               Saizheng Zhang and
+               Zhouhan Lin and
+               Sandeep Subramanian and
+               Taesup Kim and
+               Michael Pieper and
+               Sarath Chandar and
+               Nan Rosemary Ke and
+               Sai Mudumba and
+               Alexandre de Br{\'{e}}bisson and
+               Jose Sotelo and
+               Dendi Suhubdy and
+               Vincent Michalski and
+               Alexandre Nguyen and
+               Joelle Pineau and
+               Yoshua Bengio},
+  title     = {A Deep Reinforcement Learning Chatbot},
+  journal   = {CoRR},
+  volume    = {abs/1709.02349},
+  year      = {2017},
+  url       = {http://arxiv.org/abs/1709.02349},
+  archivePrefix = {arXiv},
+  eprint    = {1709.02349},
+  timestamp = {Mon, 13 Aug 2018 16:46:48 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1709-02349},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{kilgo_ng_riedl_lacasa-mas_2018, title={Reddit’s Veil of Anonymity: Predictors of engagement and participation in media environments with hostile reputations}, volume={4}, DOI={10.1177/2056305118810216}, number={4}, journal={Social Media Society}, author={Kilgo, Danielle K. and Ng, Yee Man Margaret and Riedl, Martin J. and Lacasa-Mas, Ivan}, year={2018}, pages={205630511881021}}
+
+@ARTICLE{6021376, 
+	author={P. {Van Mieghem}}, 
+	journal={IEEE Transactions on Multimedia}, 
+	title={Human Psychology of Common Appraisal: The Reddit Score}, 
+	year={2011}, 
+	volume={13}, 
+	number={6}, 
+	pages={1404-1406}, 
+	keywords={appraisal;psychology;Web sites;human psychology;common appraisal;Reddit score;Reddit subscriber;random maximum boundary;distribution function;online social news aggregator;Reddit.com;power law-like region;random walk;Psychology;Appraisal;Distribution functions;Probability density function;Social network services;Collective behavior;network;random walk;voting}, 
+	doi={10.1109/TMM.2011.2165054}, 
+	ISSN={1520-9210}, 
+	month={Dec},}
