Added citation for a website [4]

--- a/report/thesis.bib
+++ b/report/thesis.bib
@@ -69,6 +69,14 @@ abstract = { This research investigates how personality strength, news engagemen
 	ISSN={1520-9210}, 
 	month={Dec},}
 
+@article{4,
+	author = {Adi Robertson},
+	title = { Reddit bans “Fat People Hate” and other subreddits under new harassment rules. [online] },
+	publisher = {The Verge},
+	year = {2015},
+	url = {https://www.theverge.com/2015/6/10/8761763/reddit-harassment-ban-fat-people-hate-subreddit},
+}
+
 @article{5,
 	author = {Samuel Woolley},
 	title = {Automating power: Social bot interference in global politics},
