--- a/report/thesis.tex
+++ b/report/thesis.tex
@@ -1,7 +1,7 @@
 \documentclass{template}
 \usepackage{graphicx,parskip,bibunits,appendix,float}
 \usepackage[ruled] {algorithm2e}
-\usepackage{url,amsmath,amssymb,fancybox,listings,pdfpages,caption,multicol,datetime,rotating, booktabs}
+\usepackage{url,amsmath,amssymb,fancybox,listings,pdfpages,caption,multicol,datetime,rotating, booktabs, subcaption}
 %\usepackage[usenames,dvipsnames]{color}
 \usepackage[pagebackref=false,pdffitwindow=true]{hyperref}
 
